--- a/index.html
+++ b/index.html
@@ -1,125 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>docsify</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="/themes/vue.css" title="vue" />
-    <link rel="stylesheet" href="/themes/dark.css" title="dark" disabled />
-    <link rel="stylesheet" href="/themes/buble.css" title="buble" disabled />
-    <link rel="stylesheet" href="/themes/pure.css" title="pure" disabled />
-    <style>
-      nav.app-nav li ul {
-        min-width: 100px;
-      }
+<div style="width: 600px; background: #023E8A; padding: 30px;;height:auto;border: solid 7px #0077B6; outline: solid 5px #023E8A"><div style="width:580px;height:80px;overflow:hidden"><div style="font-family: cambria; font-size: 35px;; text-align:;letter-spacing:3px;text-transform:uppercase;; line-height: 25px; color: #dadada;text-align:center;">Zoe Kox</div><div style=";margin-top:5px;width:autopx;background: #0077B6; height: 5px; border-radius: 50px;"></div><div style="text-transform:uppercase;;;font-family:cambria;color: #fff;font-size:11px;margin-top:5px;float:right;">xivel |<b> 05/03/2023</b></div></div> <table>
+<td><div style="width:220px;height:340px;border: solid 3px #ADE8F4;outline: solid 3px #ADE8F4;background-image:url(https://i.ibb.co/wSm3T7h/zoekox-2.png);background-size:100%;margin-right:10px;"></div></td>
+<td><div style="background: #0077B6; padding: 20px;;width: 300px; clip-path: polygon( 0% 5%, 5% 0%, 95% 0%, 100% 5%, 100% 95%, 95% 100%, 5% 100%, 0 95% );"><div style="padding-right:30px;font: 12px calibri; color: #fff; line-height: 150%; text-align: left;overflow: auto; height: 310px;;"><b> [color=#ADE8F4]• Nombre del Personaje:[/color]</b> Zoe Kox
+ <b> [color=#ADE8F4]• Fecha de Nacimiento:[/color]</b> 22/01/1998
+ <b>[color=#ADE8F4]• Edad:</b>[/color] 11
+ <b>[color=#ADE8F4]• Raza:</b>[/color] Bruja.
+ <b>[color=#ADE8F4]• Tipo de Sangre:</b>[/color] Pura
+ <b>[color=#ADE8F4]• Rango:</b>[/color] 0
+ <b>[color=#ADE8F4]• Nivel:</b>[/color] 5
+ <b>[color=#ADE8F4]• Rasgos:</b>[/color] [Se obtienen a medida que se sube de rango y deben colocarse aquí.]
+ <b>[color=#e06666]• Defectos:</b>[/color] [Se obtienen a medida que se avanza y deben colocarse aquí.]
+ <b>[color=#ADE8F4]• Varita Asignada:</b>[/color] (Una vez la compres y se te anexe a la ficha)
+ <b>[color=#ADE8F4]• Casa de Hogwarts:</b>[/color] (Una vez entres a Hogwarts)
+ <b>[color=#ADE8F4]• Boggart:</b>-[/color]
+ <b>[color=#ADE8F4]• País de ascendencia:</b> Estados Unidos[/color]
+ <b>[color=#ADE8F4]• Experiencia mágica:</b>[/color] [color=green]Disponible[/color]/[color=red]Usada[/color]/[color=orange]Total[/color].
+ </div></div></td>
 
-      #carbonads {
-        box-shadow: none !important;
-        width: auto !important;
-      }
-    </style>
-  </head>
+</table>
+ <div style="background-color: #0077B6; padding: 20px; line-height: 15px;width:autopx;padding:20px;border: solid 2px #ADE8F4;outline: solid 1px #ADE8F4"><div style="width:autopx;height:autopx;background-color:;font-family:calibri;font-size:12px;color:#fff"><div style="border: 1px solid #ADE8F4; font: 15px calibri; padding: 6px; border-radius: 30px; color: #f8f8fa;background-color:#0096C7; text-transform: lowercase; font-variant: small-caps; margin-bottom:5px;text-align: center; width: 98%;"><div style="background: #ADE8F4; width: 18px; height: 18px; display: inline; float: left; border-radius: 100px;"></div> Personalidad</div> Niña de 11 años inteligente, tranquila y capaz de controlarse en ambientes tensos. Estudiosa y madura, Zoe ha sabido adentrarse en el mundo de la magia con la iniciación de sus familiares más cercanos para poder convertirse en la que probablemente sería una de las brujas más poderosas del siglo. Comrometedora consigo misma, se ha hecho de amistades en la comunidad mágica; gente leal que la apoya y que la han ayudado a convertirse en la excelente persona que es hoy en día.
 
-  <body>
-    <div id="app"></div>
-    <script src="//cdn.jsdelivr.net/npm/docsify-plugin-carbon@1"></script>
-    <script>
-      // Set html "lang" attribute based on URL
-      var lang = location.hash.match(/#\/(de-de|es|ru-ru|zh-cn)\//);
+ <div style="border: 1px solid #ADE8F4; font: 15px calibri; padding: 6px; border-radius: 30px; color: #f8f8fa;background-color:#0096C7; text-transform: lowercase; font-variant: small-caps; margin-bottom:5px;text-align: center; width: 98%;"><div style="background: #ADE8F4; width: 18px; height: 18px; display: inline; float: left; border-radius: 100px;"></div> Físico</div>Piel: Pálida
+Cabello: Negro
+Color de ojos: Azules
+Cicatrices: Ninguna</div></div>
 
-      if (lang) {
-        document.documentElement.setAttribute('lang', lang[1]);
-      }
+ <div style="background-color: #0077B6; padding: 20px; line-height: 15px;width:autopx;padding:20px;border: solid 2px #ADE8F4;outline: solid 1px #ADE8F4"><div style="width:autopx;height:autopx;background-color:;font-family:calibri;font-size:12px;color:#fff"><div style="border: 1px solid #ADE8F4; font: 15px calibri; padding: 6px; border-radius: 30px; color: #f8f8fa;background-color:#0096C7; text-transform: lowercase; font-variant: small-caps; margin-bottom:5px;text-align: center; width: 98%;"><div style="background: #ADE8F4; width: 18px; height: 18px; display: inline; float: left; border-radius: 100px;"></div> Objetos y Pertenencias</div>
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Equipamiento</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div>- <b>Arma</b>: (Varita, Espada Mágica, Báculo, etc)
+ - <b>Torso</b>: Blusa
+ - <b>Piernas</b>: Falda
+ - <b>Cabeza</b>: Gafas
+ - <b>Cuello</b>: -
+ - <b>Pies</b>: Zapatos
+ - <b>Manos</b>: -
+ - <b>Túnica</b>: Túnica del Colegio Hogwarts de Magia y Hechicería
+ - <b>Bolso</b>: -
+ - <b>Accesorio</b>: Pins para el cabello.
 
-      // Docsify configuration
-      window.$docsify = {
-        alias: {
-          '.*?/awesome':
-            'https://raw.githubusercontent.com/docsifyjs/awesome-docsify/master/README.md',
-          '.*?/changelog':
-            'https://raw.githubusercontent.com/docsifyjs/docsify/master/CHANGELOG.md',
-          '/.*/_navbar.md': '/_navbar.md',
-          '/es/(.*)':
-            'https://raw.githubusercontent.com/docsifyjs/docs-es/master/$1',
-          '/de-de/(.*)':
-            'https://raw.githubusercontent.com/docsifyjs/docs-de/master/$1',
-          '/ru-ru/(.*)':
-            'https://raw.githubusercontent.com/docsifyjs/docs-ru/master/$1',
-          '/zh-cn/(.*)':
-            'https://cdn.jsdelivr.net/gh/docsifyjs/docs-zh@master/$1',
-        },
-        auto2top: true,
-        basePath: '/docs/',
-        coverpage: true,
-        executeScript: true,
-        loadSidebar: true,
-        loadNavbar: true,
-        mergeNavbar: true,
-        maxLevel: 4,
-        subMaxLevel: 2,
-        name: 'docsify',
-        nameLink: {
-          '/es/': '#/es/',
-          '/de-de/': '#/de-de/',
-          '/ru-ru/': '#/ru-ru/',
-          '/zh-cn/': '#/zh-cn/',
-          '/': '#/',
-        },
-        search: {
-          noData: {
-            '/es/': '¡No hay resultados!',
-            '/de-de/': 'Keine Ergebnisse!',
-            '/ru-ru/': 'Никаких результатов!',
-            '/zh-cn/': '没有结果!',
-            '/': 'No results!',
-          },
-          paths: 'auto',
-          placeholder: {
-            '/es/': 'Buscar',
-            '/de-de/': 'Suche',
-            '/ru-ru/': 'Поиск',
-            '/zh-cn/': '搜索',
-            '/': 'Search',
-          },
-          pathNamespaces: ['/es', '/de-de', '/ru-ru', '/zh-cn'],
-        },
-        plugins: [
-          DocsifyCarbon.create('CEBI6KQE', 'docsifyjsorg'),
-          function (hook, vm) {
-            hook.beforeEach(function (html) {
-              if (/githubusercontent\.com/.test(vm.route.file)) {
-                url = vm.route.file
-                  .replace('raw.githubusercontent.com', 'github.com')
-                  .replace(/\/master/, '/blob/master');
-              } else if (/jsdelivr\.net/.test(vm.route.file)) {
-                url = vm.route.file
-                  .replace('cdn.jsdelivr.net/gh', 'github.com')
-                  .replace('@master', '/blob/master');
-              } else {
-                url =
-                  'https://github.com/docsifyjs/docsify/blob/develop/docs/' +
-                  vm.route.file;
-              }
-              var editHtml = '[:memo: Edit Document](' + url + ')\n';
-              return (
-                editHtml +
-                html +
-                '\n\n----\n\n' +
-                '<a href="https://docsify.js.org" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by docsify</a>\n\n' +
-                '<a href="https://vercel.com/?utm_source=docsifyjs&utm_campaign=oss" target="_blank" title="Vercel has given us a Pro account"><img src="/docs/_media/powered-by-vercel.svg" alt="Vercel" width="150"></a>'
-              );
-            });
-          },
-        ],
-      };
-    </script>
-    <script src="/lib/docsify.js"></script>
-    <script src="/lib/plugins/search.js"></script>
-    <script src="/lib/plugins/front-matter.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-markdown.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-nginx.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-php.min.js"></script>
-  </body>
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Inventario</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div>- <b>En Casa</b>: -
+ - <b>En Gringotts</b>: -
+ - <b>Baúl de Hogwarts</b>: -
+
+ • <b>Dinero</b>: xxx/xxx
+
+ <b>Mascotas/Criaturas</b>:
+ -
+ -
+ -
+ </div></div>
+
+ <div style="background-color: #0077B6; padding: 20px; line-height: 15px;width:autopx;padding:20px;border: solid 2px #ADE8F4;outline: solid 1px #ADE8F4"><div style="width:autopx;height:autopx;background-color:;font-family:calibri;font-size:12px;color:#fff"><div style="border: 1px solid #ADE8F4; font: 15px calibri; padding: 6px; border-radius: 30px; color: #f8f8fa;background-color:#0096C7; text-transform: lowercase; font-variant: small-caps; margin-bottom:5px;text-align: center; width: 98%;"><div style="background: #ADE8F4; width: 18px; height: 18px; display: inline; float: left; border-radius: 100px;"></div> Habilidades y Aprendizaje</div><span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>STATS</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div><b>Vitalidad</b>: -
+ <b>Puntos de Acción</b>: -
+ <b>Poder Mágico</b>: X
+ <b>Fuerza</b>: X
+ <b>Velocidad</b>: X
+ <b>Voluntad</b>: X
+
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Conocimientos</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div>• <b>Troncales</b>:
+
+ - Astronomía: 0
+ - Encantamientos: 0
+ - Defensa Contra las Artes Oscuras: 0
+ - Vuelo: 0
+ - Herbología: 0
+ - Historia de la Magia: 0
+ - Pociones: 0
+ - Transformaciones: 0
+
+ • <b>Optativas</b>:
+
+ - Estudio de Runas Antiguas: 0
+ - Aritmancia: 0
+ - Estudios Muggles: 0
+ - Cuidado de Criaturas Mágicas: 0
+ - Adivinación: 0
+
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Hechizos Aprendidos</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div>- (Aquí coloca los hechizos que has aprendido durante tu aventura)
+ -
+ -
+
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Habilidades Aprendidas</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div>- (No solo puedes aprender hechizos, también otras habilidades, apúntalas)
+ -
+ -
+
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Mejoras</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div> - ¿Tienes mejoras de la tienda de experiencia mágica? aquí van
+ -
+ -
+
+ <span style="font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>Vínculos</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:5px;"></div><b>Amistad</b>:
+ -
+ -
+ <b>Familia</b>:
+ -
+ -
+ <b>Amor</b>:
+ -
+ </div></div>
+
+ <div style="border: 1px solid #ADE8F4; font: 15px calibri; padding: 6px; color: #f8f8fa; background-color: #0096C7;border-radius: 30px; color: #f8f8fa; text-transform: lowercase; font-variant: small-caps; text-align: center; width: 98%; margin-bottom:15px;"><div style="background: #ADE8F4; width: 18px; height: 18px; display: inline; float: left; border-radius: 100px;"></div> historiales</div><span style="50px;font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>historial de acciones</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:10px;"></div><div style="width: autopx;; background: #0077B6; color: #eee; padding: 25px;;; font: 12px calibri;;height:210px;overflow:hidden; border: solid 2px #ADE8F4;outline: solid 1px #ADE8F4"><div style="height:210px;width:540px;padding-right:10px;overflow:auto;"><i>(coloca aquí tus acciones generales)</i>
+ [05/03/2023] - Inicio en MWWRPG
+
+ </div></div>
+ <span style="50px;font-family:calibri;color:#fff;font-width:bold;text-transform:uppercase;padding:"><b>historial de reputación</b></span>
+ <div style="background:rgba(0,0,0,.2);border-radius:5px;padding:2px;margin-bottom:10px;"></div><div style="width: autopx;; background: #0077B6; color: #eee; padding: 25px;;; font: 12px calibri; ;height:210px;overflow:auto; border: solid 2px #ADE8F4;outline: solid 1px #ADE8F4"><div style="height:210px;width:540px;padding-right:10px;overflow:auto;"> <i>(en este apartado debe estar indicada la obtención de reputación, y su uso)</i>
+
+ <b>Reputación (Camino principal):
+ Reputación (Casa de Hogwarts):
+ Reputación (Ministerio británico):
+ Reputación (Departamento de trabajo):</b>
+
+ <i>A medida que se desbloqueen lugares/sectores de reputación, se deben ir añadiendo.</i>
+
+ [00/00/00] - Recibo <b>X</b> reputación en [color=real](sector de rp)[/color]
+ </div></div></div>  </body>
 </html>
